tests/smt2/error/complete-revert.smt2
(assert (and false unbound))
(check-sat)